Changed src to src=img/picture

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="sub-header-container">
       <h3 class="sub-header hide" style="" href="">learn today.</h3>
       <h3 class="sub-header"  href="">craft your future.</h3>
-      <a class="btn btn-apply" href="">apply for 2018</a>
+      <a class="btn btn-apply" href="">apply for 2019</a>
 
     </div>
   </div>
@@ -163,7 +163,7 @@
   <!-- INFO SECTION -->
   <div class="application-container">
     <!-- <div > -->
-    <img class="application-image" src="APPLICATION-v2-875x516.png" alt="applications" />
+    <img class="application-image" src="img/APPLICATION-v2-875x516.png" alt="applications" />
     <!-- </div> -->
     <div class="side-info">
       <h1>START YOUR JOURNEY TO SOFTWARE MASTERY</h1>
@@ -265,7 +265,7 @@
         </div>
 
         <div class="profile">
-          <img src="Mandla.jpg" alt="Mandla Magagula" class="mentor-image" />
+          <img src="img/Mandla.jpg" alt="Mandla Magagula" class="mentor-image" />
           <div class="profile-body">
             <h3>
               Mandla <br />
@@ -304,7 +304,7 @@
         </div>
 
         <div class="profile">
-          <img src="Theo.jpg" alt="Mandla Magagula" class="mentor-image" />
+          <img src="img/Theo.jpg" alt="Mandla Magagula" class="mentor-image" />
           <div class="profile-body">
             <h3>THEO BOHNEN<small></small></h3>
             <p></p>
@@ -336,7 +336,7 @@
         </div>
 
         <div class="profile">
-          <img src="Jason.png" alt="Mandla Magagula" class="mentor-image" />
+          <img src="img/Jason.png" alt="Mandla Magagula" class="mentor-image" />
           <div class="profile-body">
             <h3>JASON SUTTIE<small></small></h3>
             <p></p>
