moved the files that has to do with styling into a folder called style

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     </div>
 
     <div class="learn-side-2">
-      <img class="logo-white" src="Logo-White.png" alt="logo" />
+      <img class="logo-white" src="img/Logo-White.png" alt="logo" />
       <ul>
         <li>
           <i class="fa fa-bookmark"></i>
