--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>Page Title</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="small-style.css" />
-  <link rel="stylesheet" href="small-one-col.css" />
-  <link rel="stylesheet" href="iphone-6-7-8.css">
-  <link rel="stylesheet" href="pixel.css">
-  <link rel="stylesheet" href="iphone-small.css">
-  <link rel="stylesheet" href="pixel.css">
+  <link rel="stylesheet" href="style/style.css" />
+  <link rel="stylesheet" href="style/small-style.css" />
+  <link rel="stylesheet" href="style/small-one-col.css" />
+  <link rel="stylesheet" href="style/iphone-6-7-8.css">
+  <link rel="stylesheet" href="style/pixel.css">
+  <link rel="stylesheet" href="style/iphone-small.css">
+  <link rel="stylesheet" href="style/pixel.css">
 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
     integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous" /> -->
